# build-day-manila-2026-starter-pack

./: pyproject.toml
agent/: pyproject.toml
agent/src/agent/: __main__.py  prompt.py
core/src/core/: __init__.py  practice.py  stream.py
