[project]
name = "agent"
version = "0.1.0"
description = "AI agent for the Casper guessing game — edit this package!"
requires-python = ">=3.10"
dependencies = [
    "core",
    "api",
    "pydantic-ai>=0.1",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.uv.sources]
core = { workspace = true }
api = { workspace = true }
